# restaurants_rankings

./: .env.example  .gitignore  .pre-commit-config.yaml  gcp_places_api_scraper.py  pyproject.toml  readme.md  requirements.txt  telegram_bot.py  wilson_script.py
output/: restaurant_98005_2026-02-26_map.html  restaurant_98105_2026-02-28.json  restaurant_98107_2026-02-28.json  restaurant_98117_2026-02-26.json  restaurant_98117_2026-02-26_map.html
src/restaurant_rankings/: __init__.py  bot.py  pagination.py  ranker.py  scraper.py
tests/: test_pagination.py  test_ranker.py  test_scraper.py
tests/fixtures/: sample_restaurants.json
