[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-rankings"
version = "0.1.0"
description = "Scrape, rank, and explore restaurants using Wilson Score Interval"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
dev = [
    "pre-commit>=3.5",
    "ruff>=0.9",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
map = [
    "folium>=0.15.0",
]

[project.scripts]
restaurant-scrape = "restaurant_rankings.scraper:main"
restaurant-rank   = "restaurant_rankings.ranker:rank_restaurants"
restaurant-bot    = "restaurant_rankings.bot:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# ── Ruff ─────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B904",   # raise without from inside except — too noisy for SystemExit
    "SIM108", # ternary operator — readability preference
    "UP015",  # unnecessary open mode parameter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "RUF001"]   # allow assert & ambiguous unicode in tests
"src/restaurant_rankings/pagination.py" = ["RUF001"]  # en-dash is intentional in output

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
